# icecap_silc

./: AUTHORS  ChangeLog  README  configure.in
src/: Makefile.am  clientops-notify.c  clientops.c  clientops.h  icecap-silc.c  icecap-silc.h  silc-channel-connection.c  silc-channel-connection.h  silc-channel-presence.c  silc-channel-presence.h  silc-channel.c  silc-channel.h  silc-client.c  silc-client.h  silc-gateway-connection.c  silc-gateway-connection.h  silc-gateway.c  silc-gateway.h  silc-local-presence.c  silc-local-presence.h  silc-message.c  silc-message.h  silc-presence.c  silc-presence.h  silc.c  silc.h  support.c  support.h
